--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>S
     <div class="header">
     <div class="logo" style="font-size: 30px;">Funkcja kwadratowa</div>
+        <a href="macierz.html">
+            
     </div>
 </body>
 </html>
